--- a/pages/our-shutters.html
+++ b/pages/our-shutters.html
@@ -184,39 +184,51 @@
   
 
   <!-- CTA -->
-  <section id="quote" class="bg-primary text-white py-20 px-6 md:px-12 text-center" data-aos="fade-up">
-    <div class="max-w-3xl mx-auto">
-      <h2 class="text-4xl font-serif mb-4">Let’s Find Your Perfect Fit</h2>
-      <p class="text-lg mb-6">Our team offers tailored advice, free consultations, and expert installation—all built around your space and style.</p>
-      <a href="mailto:contact@groveblinds.co.uk" class="bg-white text-primary font-medium px-8 py-4 rounded-full text-lg hover:bg-gray-100 transition transform hover:scale-105">Book Your Appointment</a>
+
+  <!-- BOOKING / QUOTE SECTION -->
+<section id="quote" class="relative bg-primary text-white py-32 px-6 md:px-12 overflow-hidden">
+    <div class="max-w-5xl mx-auto text-center" data-aos="fade-up">
+      <h2 class="text-5xl font-serif mb-6">Let's Find Your Perfect Fit</h2>
+      <p class="text-lg max-w-2xl mx-auto mb-10">Our team is here to help you design beautiful, functional spaces with made-to-measure shutters and blinds. Book your free consultation today-no pressure, just personal service.</p>
+      <a href="mailto:contact@groveblinds.co.uk" class="inline-block bg-white text-primary font-medium px-8 py-4 rounded-full text-lg hover:bg-gray-100 transition-all duration-300 transform hover:scale-105">Book Your Appointment</a>
     </div>
+    <svg class="absolute bottom-0 left-0 w-full" viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path fill="#ffffff" d="M0,0 C480,80 960,0 1440,80 L1440,0 L0,0 Z"></path>
+    </svg>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-[#f9f9f9] text-gray-700 pt-16 pb-8 px-6 md:px-12" data-aos="fade-up">
-    <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-12">
+  
+<!-- FOOTER -->
+<footer class="bg-[#f9f9f9] text-gray-700 pt-20 pb-10 px-6 md:px-12">
+  
+    <!-- Footer Content -->
+    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 items-start" data-aos="fade-up">
       <div>
-        <h3 class="text-xl font-serif font-semibold text-dark mb-4">Grove Blind & Shutters Co.</h3>
-        <p class="text-sm text-gray-600">Bespoke shutters, crafted with precision and care across Greater Manchester.</p>
+        <h3 class="text-2xl font-serif font-semibold text-dark mb-4">Grove Blind & Shutters Co.</h3>
+        <p class="text-base text-gray-600">Crafting elegant, functional spaces across Greater Manchester. Proudly family-run and design-led.</p>
       </div>
       <div>
-        <h4 class="text-base font-semibold text-dark mb-2">Quick Links</h4>
-        <ul class="space-y-1 text-sm">
-          <li><a href="/" class="hover:text-primary">Home</a></li>
-          <li><a href="#styles" class="hover:text-primary">Shutter Styles</a></li>
-          <li><a href="#quote" class="hover:text-primary">Book</a></li>
+        <h4 class="text-lg font-medium text-dark mb-2">Contact</h4>
+        <ul class="space-y-2 text-base">
+          <li>📍 Based in Greater Manchester</li>
+          <li>📞 <a href="tel:01234567890" class="hover:text-primary transition">01234 567 890</a></li>
+          <li>📧 <a href="mailto:contact@groveblinds.co.uk" class="hover:text-primary transition">contact@groveblinds.co.uk</a></li>
         </ul>
       </div>
       <div>
-        <h4 class="text-base font-semibold text-dark mb-2">Contact</h4>
-        <ul class="space-y-1 text-sm">
-          <li>📍 Greater Manchester</li>
-          <li>📞 <a href="tel:01234567890" class="hover:text-primary">01234 567 890</a></li>
-          <li>📧 <a href="mailto:contact@groveblinds.co.uk" class="hover:text-primary">contact@groveblinds.co.uk</a></li>
+        <h4 class="text-lg font-medium text-dark mb-2">Quick Links</h4>
+        <ul class="space-y-2 text-base">
+          <li><a href="#about" class="hover:text-primary transition">About</a></li>
+          <li><a href="#services" class="hover:text-primary transition">Services</a></li>
+          <li><a href="#gallery" class="hover:text-primary transition">Gallery</a></li>
+          <li><a href="#quote" class="hover:text-primary transition">Book</a></li>
         </ul>
       </div>
     </div>
-    <div class="mt-12 text-center text-xs text-gray-500">&copy; 2025 Grove Blind & Shutters Co. All rights reserved.</div>
+  
+    <div class="mt-16 text-center text-sm text-gray-500">
+      &copy; 2025 Grove Blind & Shutters Co. All rights reserved.
+    </div>
   </footer>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
