--- a/index.html
+++ b/index.html
@@ -85,42 +85,29 @@
 </head>
 <body class="bg-white text-black font-sans">
 
-  <header class="flex items-center justify-between px-6 md:px-12 lg:px-20 py-4 relative z-50" role="navigation" aria-label="Main Navigation">
-    <div class="text-xl font-serif font-semibold text-[#083c5a]">Grove</div>
-    <nav class="hidden md:flex space-x-6 text-sm font-medium" role="menubar">
-      <a href="#about" class="nav-link" role="menuitem" aria-label="Go to About section">About</a>
-      <a href="#services" class="nav-link" role="menuitem" aria-label="Go to Services section">Services</a>
-      <a href="pages/our-shutters.html" class="nav-link" role="menuitem" aria-label="Go to Our Shutters page">Our Shutters</a>
-      <a href="#gallery" class="nav-link" role="menuitem" aria-label="Go to Gallery section">Gallery</a>
-      <a href="#why" class="nav-link" role="menuitem" aria-label="Go to Why Choose Us section">Why Choose Us</a>
-      <a href="#book" class="nav-link" role="menuitem" aria-label="Go to Booking section">Book</a>
+  <header class="flex items-center justify-between px-6 md:px-12 lg:px-20 py-4 sticky top-0 bg-white z-50 shadow-sm" role="navigation">
+    <a href="/index.html" class="text-xl font-serif font-semibold text-dark">Grove</a>
+    <nav class="hidden md:flex space-x-6 text-sm font-medium">
+      <a href="/index.html#about" class="hover:text-primary">About</a>
+      <a href="/index.html#services" class="hover:text-primary">Services</a>
+      <a href="/pages/our-shutters.html" class="hover:text-primary">Our Shutters</a>
+      <a href="/index.html#gallery" class="hover:text-primary">Gallery</a>
+      <a href="/index.html#why" class="hover:text-primary">Why Choose Us</a>
+      <a href="/index.html#quote" class="hover:text-primary">Book</a>
     </nav>
-  
-    <!-- Mobile Menu -->
     <div class="md:hidden" x-data="{ open: false }">
-      <button
-        @click="open = !open"
-        class="text-dark"
-        aria-label="Toggle mobile menu"
-        :aria-expanded="open"
-        aria-controls="mobile-menu"
-      >
+      <button @click="open = !open" class="text-dark" aria-label="Toggle menu">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
         </svg>
       </button>
-      <div
-        x-show="open"
-        x-transition
-        id="mobile-menu"
-        class="absolute top-full left-0 w-full bg-white shadow-md rounded-b-lg py-4 mt-2 text-center space-y-2"
-      >
-        <a href="#about" class="block text-gray-700" role="menuitem">About</a>
-        <a href="#services" class="block text-gray-700" role="menuitem">Services</a>
-        <a href="pages/our-shutters.html" class="block text-gray-700" role="menuitem">Our Shutters</a>
-        <a href="#gallery" class="block text-gray-700" role="menuitem">Gallery</a>
-        <a href="#why" class="block text-gray-700" role="menuitem">Why Choose Us</a>
-        <a href="#book" class="block text-gray-700" role="menuitem">Book</a>
+      <div x-show="open" x-transition class="absolute top-full left-0 w-full bg-white shadow-md rounded-b-lg py-4 mt-2 text-center space-y-2">
+        <a href="/index.html#about" class="block">About</a>
+        <a href="/index.html#services" class="block">Services</a>
+        <a href="/pages/our-shutters.html" class="block">Our Shutters</a>
+        <a href="/index.html#gallery" class="block">Gallery</a>
+        <a href="/index.html#why" class="block">Why Choose Us</a>
+        <a href="/index.html#quote" class="block">Book</a>
       </div>
     </div>
   </header>
@@ -152,12 +139,18 @@
       <div class="space-y-6" data-aos="fade-left" data-aos-delay="150">
         <h2 class="text-5xl font-serif text-dark leading-snug">About Grove</h2>
         <p class="text-xl italic font-serif text-gray-700">Crafted elegance, delivered with care.</p>
-        <p class="text-lg leading-relaxed">At Grove, we believe that nothing transforms a space quite like premium shutters. More than a window treatment, shutters are architectural features - defining light, enhancing privacy, and elevating interiors with timeless elegance.</p>
-        <p class="text-lg leading-relaxed">With over 25 years of experience, we specialise in crafting beautiful, made-to-measure plantation shutters that fuse function with refined design. From traditional sash frames to minimalist modern spaces, shutters are the heart of our offering - durable, stylish, and endlessly customisable.</p>
-        <p class="text-lg leading-relaxed">As a proudly family-run business, Grove was founded on <strong>trust</strong>, <strong>craftsmanship</strong>, and <strong>exceptional service</strong>. We don't operate a showroom. Instead, we bring the full design experience to you - helping you envision the perfect finish within the context of your own space and natural light.</p>
-        <p class="text-lg leading-relaxed">While we also offer a curated range of bespoke blinds, shutters are our signature: the gold standard for homes seeking both beauty and performance.</p>
-        <p class="text-lg leading-relaxed">Every Grove project is <strong>personally overseen by our founders</strong>, ensuring your journey is smooth, collaborative, and built around your vision.</p>
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 pt-4">
+
+<p class="text-lg leading-relaxed">At Grove, we proudly lead with a <strong>Shutters First</strong> philosophy. To us, shutters aren't just a feature—they're the foundation of any great interior. From the moment a customer reaches out, our mindset is to design and deliver shutters that make an architectural statement and transform light, privacy, and ambiance within the home.</p>
+
+<p class="text-lg leading-relaxed">Shutters offer a permanence that blinds and curtains simply cannot. They're crafted to fit your windows with precision, acting as a built-in enhancement to your home’s design. The clean lines, timeless style, and structural quality of shutters elevate both contemporary and traditional spaces. This is why we’ve chosen to build our entire business around them.</p>
+
+<p class="text-lg leading-relaxed">By focusing exclusively on shutters, we've developed an eye for detail that generalists can't match. We understand the importance of every slat, hinge, and frame depth. We obsess over how light filters through your louvres at different times of day, how finishes complement your interiors, and how framing choices enhance both curb appeal and internal harmony.</p>
+
+<p class="text-lg leading-relaxed">We know homeowners want simplicity and confidence. That’s why our team guides every client from initial concept to installation, demystifying technical jargon and turning visions into made-to-measure solutions. We don't upsell with pressure—we educate with care, and we always recommend what works best for your space, not our margins.</p>
+
+<p class="text-lg leading-relaxed">In an industry filled with catalogue options and templated service, Grove delivers something different: a boutique, expert-driven experience rooted in clarity, design integrity, and personal connection. Our shutters are built to last—and so are the relationships we form with the homeowners who choose us.</p>
+
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-4 pt-4">
           <div class="flex items-start space-x-3">
             <div class="mt-1 text-primary">
               <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7"/></svg>
@@ -198,21 +191,21 @@
           <div class="mb-6 text-primary">
             <svg class="w-12 h-12 mx-auto" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-blinds-icon lucide-blinds"><path d="M3 3h18"/><path d="M20 7H8"/><path d="M20 11H8"/><path d="M10 19h10"/><path d="M8 15h12"/><path d="M4 3v14"/><circle cx="4" cy="19" r="2"/></svg>
           </div>
-          <h3 class="text-2xl font-serif font-semibold mb-4">Bespoke Shutters & Tailored blinds</h3>
+          <h3 class="text-2xl font-serif font-semibold mb-4">Bespoke Shutters & <br>Tailored blinds</h3>
           <p class="text-gray-600">Tailored for light control, insulation, and aesthetic impact-crafted to last with a luxury finish.</p>
         </div>
         <div class="bg-white p-8 rounded-3xl shadow-lg transform transition duration-500 hover:-translate-y-2 hover:shadow-xl" data-aos="fade-up" data-aos-delay="200">
           <div class="mb-6 text-primary">
             <svg class="w-12 h-12 mx-auto" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-handshake-icon lucide-handshake"><path d="m11 17 2 2a1 1 0 1 0 3-3"/><path d="m14 14 2.5 2.5a1 1 0 1 0 3-3l-3.88-3.88a3 3 0 0 0-4.24 0l-.88.88a1 1 0 1 1-3-3l2.81-2.81a5.79 5.79 0 0 1 7.06-.87l.47.28a2 2 0 0 0 1.42.25L21 4"/><path d="m21 3 1 11h-2"/><path d="M3 3 2 14l6.5 6.5a1 1 0 1 0 3-3"/><path d="M3 4h8"/></svg>
           </div>
-          <h3 class="text-2xl font-serif font-semibold mb-4">Professional Team</h3>
+          <h3 class="text-2xl font-serif font-semibold mb-4">Professional <br>Team</h3>
           <p class="text-gray-600">Our friendly and reliable team take great care with your home, ensuring a neat and high-standard finish every time.</p>
         </div>
         <div class="bg-white p-8 rounded-3xl shadow-lg transform transition duration-500 hover:-translate-y-2 hover:shadow-xl" data-aos="fade-up" data-aos-delay="300">
           <div class="mb-6 text-primary">
             <svg class="w-12 h-12 mx-auto" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"/><path d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"/><path d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"/><path d="M10 6h4"/><path d="M10 10h4"/><path d="M10 14h4"/><path d="M10 18h4"/></svg>
           </div>
-          <h3 class="text-2xl font-serif font-semibold mb-4">Commercial & Domestic</h3>
+          <h3 class="text-2xl font-serif font-semibold mb-4">Commercial & <br>Domestic</h3>
           <p class="text-gray-600">Whether you're fitting a home or retail space - we deliver professional, exceptional installations.</p>
         </div>
       </div>
@@ -287,43 +280,35 @@
       <p class="text-lg max-w-2xl mx-auto mb-10">Our team is here to help you design beautiful, functional spaces with made-to-measure shutters and blinds. Book your free consultation today-no pressure, just personal service.</p>
       <a href="mailto:contact@groveblinds.co.uk" class="inline-block bg-white text-primary font-medium px-8 py-4 rounded-full text-lg hover:bg-gray-100 transition-all duration-300 transform hover:scale-105">Book Your Appointment</a>
     </div>
-    <svg class="absolute bottom-0 left-0 w-full" viewBox="0 0 1440 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path fill="#ffffff" d="M0,0 C480,80 960,0 1440,80 L1440,0 L0,0 Z"></path>
-    </svg>
+    
   </section>
 
   
-<!-- FOOTER -->
-<footer class="bg-[#f9f9f9] text-gray-700 pt-20 pb-10 px-6 md:px-12">
-  
-    <!-- Footer Content -->
-    <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 items-start" data-aos="fade-up">
+  <!-- Footer -->
+  <footer class="bg-[#f9f9f9] text-gray-700 pt-16 pb-8 px-6 md:px-12">
+    <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-12">
       <div>
-        <h3 class="text-2xl font-serif font-semibold text-dark mb-4">Grove Blind & Shutters Co.</h3>
-        <p class="text-base text-gray-600">Crafting elegant, functional spaces across Greater Manchester. Proudly family-run and design-led.</p>
+        <h3 class="text-xl font-serif font-semibold text-dark mb-4">Grove Blind & Shutters Co.</h3>
+        <p class="text-sm text-gray-600">Bespoke shutters, crafted with precision and care across Greater Manchester.</p>
       </div>
       <div>
-        <h4 class="text-lg font-medium text-dark mb-2">Contact</h4>
-        <ul class="space-y-2 text-base">
-          <li>📍 Based in Greater Manchester</li>
-          <li>📞 <a href="tel:01234567890" class="hover:text-primary transition">01234 567 890</a></li>
-          <li>📧 <a href="mailto:contact@groveblinds.co.uk" class="hover:text-primary transition">contact@groveblinds.co.uk</a></li>
+        <h4 class="text-base font-semibold text-dark mb-2">Quick Links</h4>
+        <ul class="space-y-1 text-sm">
+          <li><a href="/index.html" class="hover:text-primary">Home</a></li>
+          <li><a href="/pages/our-shutters.html" class="hover:text-primary">Our Shutters</a></li>
+          <li><a href="/index.html#quote" class="hover:text-primary">Book</a></li>
         </ul>
       </div>
       <div>
-        <h4 class="text-lg font-medium text-dark mb-2">Quick Links</h4>
-        <ul class="space-y-2 text-base">
-          <li><a href="#about" class="hover:text-primary transition">About</a></li>
-          <li><a href="#services" class="hover:text-primary transition">Services</a></li>
-          <li><a href="#gallery" class="hover:text-primary transition">Gallery</a></li>
-          <li><a href="#quote" class="hover:text-primary transition">Book</a></li>
+        <h4 class="text-base font-semibold text-dark mb-2">Contact</h4>
+        <ul class="space-y-1 text-sm">
+          <li>📍 Greater Manchester</li>
+          <li>📞 <a href="tel:01234567890" class="hover:text-primary">01234 567 890</a></li>
+          <li>📧 <a href="mailto:contact@groveblinds.co.uk" class="hover:text-primary">contact@groveblinds.co.uk</a></li>
         </ul>
       </div>
     </div>
-  
-    <div class="mt-16 text-center text-sm text-gray-500">
-      &copy; 2025 Grove Blind & Shutters Co. All rights reserved.
-    </div>
+    <div class="mt-12 text-center text-xs text-gray-500">&copy; 2025 Grove Blind & Shutters Co. All rights reserved.</div>
   </footer>
   
   <!-- SCRIPTS -->
