Night build 6th. Created Blinds Page

--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
         <h2 class="text-5xl font-serif text-dark leading-snug">About Grove</h2>
         <p class="text-xl italic font-serif text-gray-700">Crafted elegance, delivered with care.</p>
 
-<p class="text-lg leading-relaxed">At Grove, we proudly lead with a <strong>Shutters First</strong> philosophy. To us, shutters aren't just a feature—they're the foundation of any great interior. From the moment a customer reaches out, our mindset is to design and deliver shutters that make an architectural statement and transform light, privacy, and ambiance within the home.</p>
+<p class="text-lg leading-relaxed">At Grove, we proudly lead with a <strong>Shutters First</strong> philosophy. To us, shutters aren't just a feature-they're the foundation of any great interior. From the moment a customer reaches out, our mindset is to design and deliver shutters that make an architectural statement and transform light, privacy, and ambiance within the home.</p>
 
 <p class="text-lg leading-relaxed">Shutters offer a permanence that blinds and curtains simply cannot. They're crafted to fit your windows with precision, acting as a built-in enhancement to your home's design. The clean lines, timeless style, and structural quality of shutters elevate both contemporary and traditional spaces. This is why we've chosen to build our entire business around them.</p>
 
 <p class="text-lg leading-relaxed">By focusing exclusively on shutters, we've developed an eye for detail that generalists can't match. We understand the importance of every slat, hinge, and frame depth. We obsess over how light filters through your louvres at different times of day, how finishes complement your interiors, and how framing choices enhance both curb appeal and internal harmony.</p>
 
-<p class="text-lg leading-relaxed">We know homeowners want simplicity and confidence. That's why our team guides every client from initial concept to installation, demystifying technical jargon and turning visions into made-to-measure solutions. We don't upsell with pressure—we educate with care, and we always recommend what works best for your space, not our margins.</p>
+<p class="text-lg leading-relaxed">We know homeowners want simplicity and confidence. That's why our team guides every client from initial concept to installation, demystifying technical jargon and turning visions into made-to-measure solutions. We don't upsell with pressure-we educate with care, and we always recommend what works best for your space, not our margins.</p>
 
-<p class="text-lg leading-relaxed">In an industry filled with catalogue options and templated service, Grove delivers something different: a boutique, expert-driven experience rooted in clarity, design integrity, and personal connection. Our shutters are built to last—and so are the relationships we form with the homeowners who choose us.</p>
+<p class="text-lg leading-relaxed">In an industry filled with catalogue options and templated service, Grove delivers something different: a boutique, expert-driven experience rooted in clarity, design integrity, and personal connection. Our shutters are built to last-and so are the relationships we form with the homeowners who choose us.</p>
 
 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 pt-4">
           <div class="flex items-start space-x-3">
@@ -171,7 +171,7 @@
     <!-- Gareth -->
     <div class="flex flex-col items-center text-center space-y-6" data-aos="fade-right">
       <div class="w-40 h-40 rounded-full overflow-hidden shadow-lg">
-        <img src="/images/gareth.jpg" alt="Gareth" class="w-full h-full object-cover">
+        <!--<img src="/images/gareth.jpg" alt="Gareth" class="w-full h-full object-cover">-->
       </div>
       <div>
         <h4 class="text-2xl font-serif font-semibold text-dark">Gareth</h4>
@@ -185,7 +185,7 @@
     <!-- Gavin -->
     <div class="flex flex-col items-center text-center space-y-6" data-aos="fade-left" data-aos-delay="150">
       <div class="w-40 h-40 rounded-full overflow-hidden shadow-lg">
-        <img src="/images/gavin.jpg" alt="Gavin" class="w-full h-full object-cover">
+        <!--<img src="/images/gavin.jpg" alt="Gavin" class="w-full h-full object-cover">-->
       </div>
       <div>
         <h4 class="text-2xl font-serif font-semibold text-dark">Gavin</h4>
