--- a/pages/cafe-style-shutters.html
+++ b/pages/cafe-style-shutters.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Café Style Shutters | Grove Blind & Shutters Co.</title>
+  <title>Café Style Shutters | Grove Blind & Shutter Co.</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -43,7 +43,7 @@
     <span class="uppercase tracking-[.25em] text-sm md:text-base font-medium mb-4 block">Our Collection</span>
     <h1 class="text-5xl md:text-7xl font-serif font-semibold mb-6">Café Style Shutters</h1>
     <p class="text-lg md:text-xl max-w-2xl mx-auto leading-relaxed">
-      Chic, continental-inspired shutters that frame your lower windows in elegance — 
+      Chic, continental-inspired shutters that frame your lower windows in elegance - 
       perfect for privacy while welcoming natural light.
     </p>
     <a href="#details" 
@@ -94,7 +94,7 @@
       <h3 class="text-3xl md:text-4xl font-serif text-dark mb-4"><span class="text-primary">Continental Elegance</span>, <br>Re‑imagined for Your Home</h3>
       <p class="text-lg text-gray-700 leading-relaxed">
         Café style shutters aren’t just functional, they’re a design statement. 
-        Inspired by Parisian cafés and timeless architecture, they balance charm and utility — 
+        Inspired by Parisian cafés and timeless architecture, they balance charm and utility - 
         giving your home a distinctive edge.
       </p>
     </div>
