--- a/pages/solid-panel-shutters.html
+++ b/pages/solid-panel-shutters.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Solid Panel Shutters | Grove Blind & Shutters Co.</title>
+  <title>Solid Panel Shutters | Grove Blind & Shutter Co.</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -67,12 +67,12 @@
     <div>
       <h2 class="text-4xl md:text-5xl font-serif text-dark mb-6">Why Choose <span class="text-primary">Solid Panel</span> Shutters?</h2>
       <p class="text-lg leading-relaxed mb-8 text-gray-700">
-        Crafted from solid timber, these shutters don’t just cover your windows — they redefine the atmosphere of your home. 
+        Crafted from solid timber, these shutters don’t just cover your windows - they redefine the atmosphere of your home. 
         Unlike louvred designs, full solid panels provide unmatched blackout and insulation, making them ideal for bedrooms, heritage properties, and anywhere elegance meets function.
       </p>
       <ul class="space-y-4 text-gray-700">
         <li class="flex items-start"><span class="text-primary mr-3">✔</span> Complete blackout for restful sleep</li>
-        <li class="flex items-start"><span class="text-primary mr-3">✔</span> Superior insulation — perfect for older homes</li>
+        <li class="flex items-start"><span class="text-primary mr-3">✔</span> Superior insulation - perfect for older homes</li>
         <li class="flex items-start"><span class="text-primary mr-3">✔</span> Heritage-inspired design for period interiors</li>
         <li class="flex items-start"><span class="text-primary mr-3">✔</span> Strong, durable, built to last</li>
         <li class="flex items-start"><span class="text-primary mr-3">✔</span> Custom finishes available for a tailored look</li>
@@ -88,7 +88,7 @@
       <h3 class="text-3xl md:text-4xl font-serif text-dark mb-4">Classic Style with <span class="text-primary">Modern Comfort</span></h3>
       <p class="text-lg text-gray-700 leading-relaxed">
         Solid Panel Shutters embody centuries of tradition while delivering modern-day benefits. 
-        They insulate against drafts in winter, keep rooms cool in summer, and block unwanted noise — 
+        They insulate against drafts in winter, keep rooms cool in summer, and block unwanted noise - 
         all while adding a touch of elegance that never goes out of style.
       </p>
     </div>
