--- a/pages/tier-on-tier-shutters.html
+++ b/pages/tier-on-tier-shutters.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tier-on-Tier Shutters | Grove Blind & Shutters Co.</title>
+  <title>Tier-on-Tier Shutters | Grove Blind & Shutter Co.</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -44,7 +44,7 @@
     <span class="uppercase tracking-[.25em] text-sm md:text-base font-medium mb-4 block">Our Collection</span>
     <h1 class="text-5xl md:text-7xl font-serif font-semibold mb-6">Tier‑on‑Tier Shutters</h1>
     <p class="text-lg md:text-xl max-w-2xl mx-auto leading-relaxed">
-      Elegant and versatile — Tier‑on‑Tier Shutters give you independent control of top and bottom panels 
+      Elegant and versatile - Tier‑on‑Tier Shutters give you independent control of top and bottom panels 
       for the perfect balance of light, privacy, and style.
     </p>
     <a href="#details" 
@@ -89,7 +89,7 @@
       <h3 class="text-3xl md:text-4xl font-serif text-dark mb-4">Flexibility Meets <span class="text-primary">Timeless Design</span></h3>
       <p class="text-lg text-gray-700 leading-relaxed">
         Tier‑on‑Tier shutters are ideal for busy households and stylish spaces alike. 
-        They allow you to adjust light and privacy throughout the day — 
+        They allow you to adjust light and privacy throughout the day - 
         keeping rooms bright while ensuring comfort and seclusion when you need it.
       </p>
     </div>
