--- a/pages/full-height-shutters.html
+++ b/pages/full-height-shutters.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Full Height Shutters | Grove Blind & Shutters Co.</title>
+  <title>Full Height Shutters | Grove Blind & Shutter Co.</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -44,7 +44,7 @@
     <span class="uppercase tracking-[.25em] text-sm md:text-base font-medium mb-4 block">Our Collection</span>
     <h1 class="text-5xl md:text-7xl font-serif font-semibold mb-6">Full Height Shutters</h1>
     <p class="text-lg md:text-xl max-w-2xl mx-auto leading-relaxed">
-      Timeless, elegant, and practical — Full Height Shutters are our most popular style, 
+      Timeless, elegant, and practical - Full Height Shutters are our most popular style, 
       offering complete coverage and versatile light control for every room.
     </p>
     <a href="#details" 
@@ -88,7 +88,7 @@
       <h3 class="text-3xl md:text-4xl font-serif text-dark mb-4">The Most <span class="text-primary">Versatile</span> Shutter Style</h3>
       <p class="text-lg text-gray-700 leading-relaxed">
         Full Height shutters adapt seamlessly to every room, from living areas to bedrooms. 
-        Add a mid‑rail for greater flexibility or keep a clean uninterrupted design — 
+        Add a mid‑rail for greater flexibility or keep a clean uninterrupted design - 
         either way, they provide insulation, privacy, and timeless elegance in one solution.
       </p>
     </div>
