Night Build 6th #2 Favicon and Seo added partly

--- a/index.html
+++ b/index.html
@@ -3,7 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grove Blind & Shutter Co.</title>
+  <meta name="description" content="Grove Blind & Shutter Co. provides bespoke shutters and blinds across Greater Manchester. Discover luxury window treatments designed for elegance, insulation, and lasting style." />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Grove Blind & Shutter Co.",
+  "image": "https://groveblindsuk.com/images/logo.webp",
+  "@id": "",
+  "url": "https://groveblindsuk.com",
+  "telephone": "08000599579",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Greater Manchester",
+    "addressCountry": "UK"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": "53.4808",
+    "longitude": "-2.2426"
+  },
+  "sameAs": [
+    "https://www.facebook.com/groveblindandshutters",
+    "https://www.instagram.com/groveblindandshutterco/"
+  ]
+}
+</script>
+<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+<title>Luxury Shutters & Blinds in Greater Manchester | Grove Blind & Shutter Co.</title>
+
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
@@ -114,7 +142,7 @@
       <div class="relative" data-aos="fade-right">
         <div class="w-full aspect-square rounded-3xl overflow-hidden shadow-xl transform transition duration-500 hover:scale-[1.03] bg-white p-10">
 
-          <img src="./images/logo_1_-removebg-preview.png" alt="Grove Logo" class="w-full h-full object-contain" />
+          <img src="./images/logo.webp" alt="Grove Logo" class="w-full h-full object-contain" />
         </div>
       </div>
       <div class="space-y-6" data-aos="fade-left" data-aos-delay="150">
