--- a/pages/blinds.html
+++ b/pages/blinds.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Blinds | Grove Blind & Shutter Co.</title>
+  <<title>Bespoke Blinds | Grove Blind & Shutter Co.</title>
+<meta name="description" content="Explore our collection of bespoke blinds — including roller, Venetian, and perfect fit blinds. Stylish, practical, and tailored to your home." />
+
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
