--- a/pages/cafe-style-shutters.html
+++ b/pages/cafe-style-shutters.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Café Style Shutters | Grove Blind & Shutter Co.</title>
+  <meta name="description" content="Chic and continental inspired — our café style shutters cover the lower half of windows, offering street-level privacy while letting natural light flood in." />
+
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
