--- a/pages/full-height-shutters.html
+++ b/pages/full-height-shutters.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Full Height Shutters | Grove Blind & Shutter Co.</title>
+  <title>Tier‑on‑Tier Shutters | Grove Blind & Shutter Co.</title>
+  <meta name="description" content="Tier‑on‑tier shutters offer independent top and bottom panels for ultimate light and privacy control. A stylish solution for bay windows and street-facing homes." />
+
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
