night 6th aug 2.1

--- a/pages/solid-panel-shutters.html
+++ b/pages/solid-panel-shutters.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Solid Panel Shutters | Traditional Shutters | Grove Blind & Shutter Co.</title>
+  <title>Solid Panel Shutters | Grove Blind & Shutter Co.</title>
 <meta name="description" content="Solid panel shutters provide blackout, insulation, and heritage charm. Crafted from durable timber, they are perfect for bedrooms and period properties." />
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
