--- a/pages/waterproof-shutters.html
+++ b/pages/waterproof-shutters.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Waterproof Shutters | Kitchen & Bathroom Shutters | Grove Blind & Shutter Co.</title>
+  <title>Waterproof Shutters | Grove Blind & Shutter Co.</title>
 <meta name="description" content="Perfect for kitchens and bathrooms — our waterproof shutters are moisture-resistant, easy to clean, and built to last while keeping your home stylish." />
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
