overnightly 7th aug hotupdate. testimonials

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
      target="_blank" 
      rel="noopener noreferrer"
      class="text-primary font-medium hover:text-dark transition underline underline-offset-4">
-     Click here to find what everyone said →
+     Click here to find out what all of our clients said →
   </a>
 </div>
 </section>
