--- a/index.html
+++ b/index.html
@@ -297,69 +297,82 @@
     </div>
   </section>
 
-  <!-- TESTIMONIALS SECTION -->
+<!-- TESTIMONIALS SECTION -->
 <section id="testimonials" class="bg-a py-32 px-6 md:px-12 overflow-hidden relative">
   <div class="max-w-6xl mx-auto text-center relative">
-    <h2 class="text-5xl font-serif text-dark text-center mb-12" data-aos="fade-up">Kind Words From Our Clients</h2>
+    <h2 class="text-3xl sm:text-5xl font-serif text-dark text-center mb-8 sm:mb-12" data-aos="fade-up">
+      Kind Words From Our Clients
+    </h2>
 
-   
-<div x-data="testimonialSlider()" x-init="init()" 
-     class="relative min-h-[220px] md:min-h-[260px] flex flex-col items-center justify-center">
-  
-  <template x-for="(t, index) in testimonials" :key="index">
     <div 
-      x-show="active === index"
-      x-transition:enter="transition ease-out duration-700"
-      x-transition:enter-start="opacity-0"
-      x-transition:enter-end="opacity-100"
-      x-transition:leave="transition ease-in duration-500"
-      x-transition:leave-start="opacity-100"
-      x-transition:leave-end="opacity-0"
-      class="absolute inset-x-0 mx-auto flex flex-col items-center justify-center px-6"
+      x-data="testimonialSlider()" 
+      x-init="init(); bindSwipe($el)" 
+      class="relative w-full flex flex-col items-center justify-center text-center min-h-[360px] overflow-hidden"
     >
-      <p class="text-xl md:text-2xl italic text-gray-700 leading-relaxed max-w-3xl">
-        “<span x-text="t.text"></span>”
-      </p>
-      <span class="mt-6 block text-dark font-serif text-base md:text-lg font-medium" x-text="t.name"></span>
+
+      <!-- Testimonials -->
+      <template x-for="(t, index) in testimonials" :key="index">
+        <div 
+          x-show="active === index"
+          x-transition:enter="transition ease-out duration-700"
+          x-transition:enter-start="opacity-0"
+          x-transition:enter-end="opacity-100"
+          x-transition:leave="transition ease-in duration-500"
+          x-transition:leave-start="opacity-100"
+          x-transition:leave-end="opacity-0"
+          x-cloak
+          x-bind:class="{ 'absolute inset-0': active !== index }"
+          class="w-full flex flex-col items-center justify-center px-6 text-center"
+        >
+          <p class="text-xl md:text-2xl italic text-gray-700 leading-relaxed max-w-3xl">
+            “<span x-text="t.text"></span>”
+          </p>
+          <span class="mt-6 block text-dark font-serif text-base md:text-lg font-medium" x-text="t.name"></span>
+        </div>
+      </template>
+
+      <!-- Arrows (Desktop only) -->
+      <button @click="prev(); restartTimer()" aria-label="Previous"
+              class="hidden sm:flex absolute left-0 top-1/2 -translate-y-1/2 p-3 rounded-full bg-white/80 backdrop-blur-sm shadow-md hover:bg-primary hover:text-white transition z-10">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+        </svg>
+      </button>
+
+      <button @click="next(); restartTimer()" aria-label="Next"
+              class="hidden sm:flex absolute right-0 top-1/2 -translate-y-1/2 p-3 rounded-full bg-white/80 backdrop-blur-sm shadow-md hover:bg-primary hover:text-white transition z-10">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+        </svg>
+      </button>
+
+      <!-- Dots -->
+      <div class="flex justify-center mt-12 space-x-3">
+        <template x-for="(t, index) in testimonials" :key="'dot-'+index">
+          <div @click="goTo(index); restartTimer()"
+               :class="active === index ? 'bg-primary' : 'bg-gray-300'"
+               class="w-3 h-3 rounded-full cursor-pointer transition"></div>
+        </template>
+      </div>
     </div>
-  </template>
 
-  <!-- Arrows -->
-  <button @click="prev(); restartTimer()" aria-label="Previous"
-          class="absolute left-0 top-1/2 -translate-y-1/2 p-3 rounded-full bg-white/80 backdrop-blur-sm shadow-md hover:bg-primary hover:text-white transition">
-    <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
-    </svg>
-  </button>
-  <button @click="next(); restartTimer()" aria-label="Next"
-          class="absolute right-0 top-1/2 -translate-y-1/2 p-3 rounded-full bg-white/80 backdrop-blur-sm shadow-md hover:bg-primary hover:text-white transition">
-    <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-    </svg>
-  </button>
-</div>
-
-<!-- Dots -->
-<div class="flex justify-center mt-12 space-x-3">
-  <template x-for="(t, index) in testimonials" :key="'dot-'+index">
-    <div @click="goTo(index); restartTimer()"
-         :class="active === index ? 'bg-primary' : 'bg-gray-300'"
-         class="w-3 h-3 rounded-full cursor-pointer transition"></div>
-  </template>
-</div>
-
-<!-- Google Reviews Link -->
-<div class="text-center mt-8">
-  <a href="https://share.google/TaJtTHAN4gCwhLQel" 
-     target="_blank" 
-     rel="noopener noreferrer"
-     class="text-primary font-medium hover:text-dark transition underline underline-offset-4">
-     Click here to find out what all of our clients said →
-  </a>
-</div>
+    <!-- Google Reviews Link -->
+    <div class="text-center mt-8">
+      <a href="https://share.google/TaJtTHAN4gCwhLQel" 
+         target="_blank" 
+         rel="noopener noreferrer"
+         class="text-primary font-medium hover:text-dark transition underline underline-offset-4">
+         Click here to find out what all of our clients said →
+      </a>
+    </div>
+  </div>
 </section>
+
 <script>
 function testimonialSlider() {
+  let startX = 0;
+  let endX = 0;
+
   return {
     testimonials: [],
     active: 0,
@@ -369,6 +382,7 @@ function testimonialSlider() {
       try {
         const res = await fetch('/reviews.json');
         this.testimonials = await res.json();
+        clearInterval(this.timer);
         this.startTimer();
       } catch (e) {
         console.error('Failed to load testimonials:', e);
@@ -394,10 +408,32 @@ function testimonialSlider() {
 
     goTo(index) {
       this.active = index;
+    },
+
+    bindSwipe(el) {
+      el.addEventListener("touchstart", (e) => {
+        startX = e.changedTouches[0].screenX;
+      });
+
+      el.addEventListener("touchend", (e) => {
+        endX = e.changedTouches[0].screenX;
+        this.handleSwipe();
+      });
+    },
+
+    handleSwipe() {
+      const delta = endX - startX;
+      const threshold = 50; // min px to trigger swipe
+
+      if (Math.abs(delta) > threshold) {
+        delta < 0 ? this.next() : this.prev();
+        this.restartTimer();
+      }
     }
-  }
+  };
 }
 </script>
+
 
 
   <!-- BOOKING / QUOTE SECTION -->
